--- a/Investgating-dataset/investigate-a-dataset-1.ipynb
+++ b/Investgating-dataset/investigate-a-dataset-1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "\n",
     "\n",
-    "# Project: Investigate NO SHOW Medical APPOINTMENTS Data\n",
+    "# Project: Investigate No Show Medical APPOINTMENTS Data\n",
     "\n",
     "## Table of Contents\n",
     "<ul>\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
