--- a/Investgating-dataset/investigate-a-dataset-1.ipynb
+++ b/Investgating-dataset/investigate-a-dataset-1.ipynb
@@ -2094,16 +2094,13 @@
     "<a id='conclusions'></a>\n",
     "## Conclusions\n",
     "\n",
-    "> **Tip**: Finally, summarize your findings and the results that have been performed. Make sure that you are clear with regards to the limitations of your exploration. If you haven't done any statistical tests, do not imply any statistical conclusions. And make sure you avoid implying causation from correlation!\n",
-    "\n",
-    "> **Tip**: Once you are satisfied with your work, you should save a copy of the report in HTML or PDF form via the **File** > **Download as** submenu. Before exporting your report, check over it to make sure that the flow of the report is complete. You should probably remove all of the \"Tip\" quotes like this one so that the presentation is as tidy as possible. Congratulations!\n",
     "\n",
     "> My analysis is consisting of:\n",
     "\n",
     "> **introduction**\n",
     "\n",
     "> - we loaded our main libraries we're going to use\n",
-    "> - we set our main **question**or this dataset (**what are the factors/variables that might be affecting the attendance level**)\n",
+    "> - we set our main **question** on this dataset (**what are the factors/variables that might be affecting the attendance level**)\n",
     "\n",
     "\n",
     "> **Data wrangling**\n",
@@ -2130,7 +2127,7 @@
     "\n",
     "> - Then we checked several variables together.\n",
     "> - please note that\n",
-    "> > - **There no direct relatioship between each of them and the attendance level. we can't gurantee than one variable is hugely affecting their attendance and we had some limitations as well and we didn't do any statistical analysis**\n",
+    "> > - **There no direct relatioship between each of them and the attendance level. we can't gurantee than one variable is hugely affecting their attendance and we had some limitations as well**\n",
     "\n",
     "> > - **We are limited to the info we have in our data and we of course not aware of other events/situations which would have a huge impact on their attendance**"
    ]
